--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,10 @@ h3 {
   align-items: center;
   cursor: pointer;
 }
+
 .icon-close-modal {
+  width: 100%;
+  height: 100%;
   fill: #000;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -314,6 +317,7 @@ h3 {
 .icon-close-modal:focus {
   fill: var(--accent-color);
 }
+
 /* ========MODAL======= */
 .form {
   width: 528px;
@@ -357,7 +361,7 @@ h3 {
 .form-input {
   display: block;
   width: 100%;
-  padding: 11px 42px;
+  padding: 11px 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -815,6 +819,7 @@ textarea:focus {
 
 .footer > .container {
   display: flex;
+  justify-content: baseline;
 }
 
 .footer-soc {
@@ -823,16 +828,17 @@ textarea:focus {
 /* ========FOOTER-FORM======= */
 .footer-submit {
   position: relative;
-  width: 100%;
+  width: 570px;
+  margin-left: 874px;
 }
 
 .footer-submit-form {
   position: absolute;
 
-  bottom: 80%;
-  right: 42%;
+  bottom: 100%;
+  right: 50%;
   margin-right: -50%;
-  transform: translate(-48%, -36%);
+  transform: translate(-30%, -40%);
 }
 
 .footer-submit-text {
