--- a/css/styles.css
+++ b/css/styles.css
@@ -361,7 +361,8 @@ h3 {
 .form-input {
   display: block;
   width: 100%;
-  padding: 11px 40px;
+  padding: 11px 42px;
+  height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
